frontend/test/should_pass/exectype_AssignSetmapSizeToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<foo>=set<foo>{} && y:map<AA,HH>=map<AA,HH>{} ;> {i:int=x.size()} || {i=y.size()});
	}
}