frontend/test/should_fail/exectype_SetmapAdd3.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int> =set<int> && y:int=3 && z:string="bla" && x.add(y,z));
	}
}